@@ -1,1 +1,1 @@
-|/home/bogofilter/bogofilter-qfe
+|/home/bogofilter/bogofilter-qfe.sh
